@@ -64,6 +64,14 @@
   <translation type="gettext">gnome-calculator</translation>
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="41.rc" date="2021-09-04" type="development">
+      <description>
+        <p>Overview of changes in gnome-calculator 41.rc</p>
+        <ul>
+          <li>Updated Translations</li>
+        </ul>
+      </description>
+    </release>
     <release version="41.alpha" date="2021-07-10" type="development">
       <description>
         <p>Overview of changes in gnome-calculator 41.alpha</p>
