@@ -1,3 +1,6 @@
+Overview of changes in gnome-calculator 41.rc
+    * Updated Translations
+
 Overview of changes in gnome-calculator 41.alpha
     * Updated Translations
     * Adaptive preferences window !85 (Adrien Plazas)
